Implemented oauth backend

--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -35,3 +35,7 @@
 [[constraint]]
   name = "github.com/gocraft/dbr"
   version = "2.1.0"
+
+[[constraint]]
+  name = "github.com/patrickmn/go-cache"
+  version = "2.1.0"
