--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -39,3 +39,7 @@
 [[constraint]]
   name = "github.com/patrickmn/go-cache"
   version = "2.1.0"
+
+[[constraint]]
+  name = "github.com/dgrijalva/jwt-go"
+  version = "3.1.0"
