--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -43,3 +43,7 @@
 [[constraint]]
   name = "github.com/dgrijalva/jwt-go"
   version = "3.1.0"
+
+[[constraint]]
+  name = "github.com/blevesearch/bleve"
+  version = "0.5.0"
