--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.1",
+    "angular2-markdown": "^2.2.2",
     "core-js": "^2.4.1",
     "ng2-simplemde": "^2.0.0",
     "rxjs": "^5.5.2",
